ql/src/test/queries/positive/groupby6.q
--! qt:dataset:src
FROM src
SELECT DISTINCT substr(src.value,5,1)
