ql/src/test/queries/negative/invalid_select.q
--! qt:dataset:src
SELECT
  trim(trim(a))
  trim(b)
FROM src;
